--- a/pages/detalle.htm
+++ b/pages/detalle.htm
@@ -1,8 +1,34 @@
 title = "detalle"
-url = "/detalle"
+url = "/detalle/:slug"
 layout = "pagina"
 is_hidden = 0
+
+[builderDetails]
+modelClass = "LuisMayta\Intranet\Models\Material"
+identifierValue = "{{ :slug }}"
+modelKeyColumn = "slug"
+displayColumn = "slug"
+notFoundMessage = "Record not found"
 ==
+<?php
+use LuisMayta\Intranet\Models\Material;
+
+function onStart()
+{
+    $this['class_material'] = 'current_page_item';
+    $material = Material::where('slug',$this->param('slug'))->get();
+    $this['title_page'] = $material[0]->titulo;
+    $this['og_url'] = 'http://willymartinezsanchez.com/detalle/'.$material[0]->slug;
+    $this['og_img'] = $material[0]->imagen->path;
+    $this['og_descripcion'] = $material[0]->resumen;
+    
+}
+?>
+==
+{% set record = builderDetails.record %}
+{% set displayColumn = builderDetails.displayColumn %}
+{% set notFoundMessage = builderDetails.notFoundMessage %}
+
 <div class="section" style="padding-top:90px; padding-bottom:40px; background-color:#75aaeb">
     <div class="section_wrapper clearfix">
         <div class="items_group clearfix">
@@ -21,27 +47,29 @@ is_hidden = 0
             <!-- One Second (1/2) Column -->
             <div class="column one-second column_image">
                 <div class="image_frame no_link scale-with-grid no_border aligncenter">
-                    <div class="image_wrapper"><img class="scale-with-grid" src="http://intranet.willymartinezsanchez.com/sites/default/files/data/productos/2019-03/tapa%20liderazgo%20es%20servicio.jpg" alt="">
+                    <div class="image_wrapper"><img class="scale-with-grid" src="{{record.imagen.path}}" alt="">
+                    </div>
+                </div>
+                <div style="margin-top: 1rem;">
+                    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                        <a class="a2a_button_facebook"></a>
+                        <a class="a2a_button_twitter"></a>
+                        <a class="a2a_button_pinterest"></a>
+                        <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
                     </div>
                 </div>
             </div>
             <!-- One Second (1/2) Column -->
             <div class="column one-second column_column">
                 <div class="column_attr ">
-                    <h2 style="margin-bottom: 7px; margin-top: 15px;">Libro Liderazgo es Servicio - Enfoque Bíblico</h2>
-                    <p>
-                    </p><div class="a2a_kit a2a_kit_size_32 a2a_default_style" style="line-height: 32px;">
-                    <a class="a2a_dd" href="https://www.addtoany.com/share#url=http%3A%2F%2Fwillymartinezsanchez.com%2Fproducto%2F83&amp;title=Willy%20Martinez%20Sanchez"><span class="a2a_svg a2a_s__default a2a_s_a2a" style="background-color: rgb(1, 102, 255);"><svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><g fill="#FFF"><path d="M14 7h4v18h-4z"></path><path d="M7 14h18v4H7z"></path></g></svg></span><span class="a2a_label a2a_localize" data-a2a-localize="inner,Share">Compartir</span></a>
-                    <a class="a2a_button_facebook" target="_blank" href="/#facebook" rel="nofollow noopener"><span class="a2a_svg a2a_s__default a2a_s_facebook" style="background-color: rgb(59, 89, 152);"><svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="#FFF" d="M17.78 27.5V17.008h3.522l.527-4.09h-4.05v-2.61c0-1.182.33-1.99 2.023-1.99h2.166V4.66c-.375-.05-1.66-.16-3.155-.16-3.123 0-5.26 1.905-5.26 5.405v3.016h-3.53v4.09h3.53V27.5h4.223z"></path></svg></span><span class="a2a_label">Facebook</span></a>
-                    <a class="a2a_button_twitter" target="_blank" href="/#twitter" rel="nofollow noopener"><span class="a2a_svg a2a_s__default a2a_s_twitter" style="background-color: rgb(85, 172, 238);"><svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="#FFF" d="M28 8.557a9.913 9.913 0 0 1-2.828.775 4.93 4.93 0 0 0 2.166-2.725 9.738 9.738 0 0 1-3.13 1.194 4.92 4.92 0 0 0-3.593-1.55 4.924 4.924 0 0 0-4.794 6.049c-4.09-.21-7.72-2.17-10.15-5.15a4.942 4.942 0 0 0-.665 2.477c0 1.71.87 3.214 2.19 4.1a4.968 4.968 0 0 1-2.23-.616v.06c0 2.39 1.7 4.38 3.952 4.83-.414.115-.85.174-1.297.174-.318 0-.626-.03-.928-.086a4.935 4.935 0 0 0 4.6 3.42 9.893 9.893 0 0 1-6.114 2.107c-.398 0-.79-.023-1.175-.068a13.953 13.953 0 0 0 7.55 2.213c9.056 0 14.01-7.507 14.01-14.013 0-.213-.005-.426-.015-.637.96-.695 1.795-1.56 2.455-2.55z"></path></svg></span><span class="a2a_label">Twitter</span></a>
-                    <div style="clear: both;"></div></div>
+                    <h2 style="margin-bottom: 7px; margin-top: 15px;">{{record.titulo}}</h2>
                     <p></p>
                     <p class="big themecolor">
-                        Libro, 2019
+                        {{record.tipo}}, {{record.categoria}} {{record.year}}
                     </p>
-                    <p></p><h1>S/20.00</h1><p></p>
+                    <p></p><h1>S/{{record.precio}}</h1><p></p>
                     <p>
-                        El verdadero propósito del liderazgo es servir a la comunidad, mediante este libro podemos reconocer el fundamento bíblico que todo discípulo de Jesucristo debe tener en cuenta cuando ejerce un rol como líder.
+                        {{record.descripcion|raw}}
                     </p>
                     <hr class="no_line hrmargin_b_20">
                     <p style="font-style: italic;">
@@ -58,7 +86,7 @@ is_hidden = 0
             <div class="mcb-wrap-inner">
                 <div class="column mcb-column one-third column_how_it_works ">
                     <div class="how_it_works has_border">
-                        <div class="image"><img src="http://willymartinezsanchez.com/images/choices.png" class="scale-with-grid" alt="home_betheme_hiw_1" width="98" height="91">
+                        <div class="image"><img src="http://willymartinezsanchez.com/storage/app/media/choices.png" class="scale-with-grid" alt="home_betheme_hiw_1" width="98" height="91">
                         </div>
                         <h4>Paso 1</h4>
                         <div class="desc">
@@ -68,7 +96,7 @@ is_hidden = 0
                 </div>
                 <div class="column mcb-column one-third column_how_it_works ">
                     <div class="how_it_works has_border">
-                        <div class="image"><img src="http://willymartinezsanchez.com/images/bank-building.png" class="scale-with-grid" alt="home_betheme_hiw_1" width="98" height="91">
+                        <div class="image"><img src="http://willymartinezsanchez.com/storage/app/media/bank-building.png" class="scale-with-grid" alt="home_betheme_hiw_1" width="98" height="91">
                         </div>
                         <h4>Paso 2</h4>
                         <div class="desc">
@@ -78,7 +106,7 @@ is_hidden = 0
                 </div>
                 <div class="column mcb-column one-third column_how_it_works ">
                     <div class="how_it_works has_border">
-                        <div class="image"><img src="http://willymartinezsanchez.com/images/cloud-computing.png" class="scale-with-grid" alt="home_betheme_hiw_1" width="98" height="91">
+                        <div class="image"><img src="http://willymartinezsanchez.com/storage/app/media/cloud-computing.png" class="scale-with-grid" alt="home_betheme_hiw_1" width="98" height="91">
                         </div>
                         <h4>Paso 3</h4>
                         <div class="desc">
